--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
-/*broken fonts yay
-@font-face {
-    font-family: "Roboto";
-    src: url("Roboto-Regular.ttf")
+:root {
+    --dark: #000000; 
+	--light: #FFFFFF; 
+	--blocks: #99B3C6;
+    --transition: all 0.3s ease 0s; 
+    /* all variables above */
 }
-*/
 
-body {
-        font-family: 'Roboto', serif;
-      }
+html, body{
+	height:100%;
+	overflow: auto;
+    font-family: 'Maven Pro', sans-serif;
+}
 
 #home-body {
-    background-image: url(images/Group.svg);
-    background-color: #2B2D35;
-    height: 800px; /*it'd be best to use percents, that way it's more accessible to different screen sizes. Should come back and fix it later. */
+    background-image: url(/images/bluemap.svg);
+    background-color: #EEEEEE;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 95%;
+    width: 100%;
     
 /* can't figure out the figma dimensions, but here they are whenever I figure it out
     position: absolute;
@@ -35,38 +38,37 @@ ISSUES: should we add mini-logo?
     position: fixed;
     bottom: 0;
     width: 100%;
-    font-family: "Roboto-Regular", sans-serif; 
-    font-size: 20pt;
+    font-family: "Maven Pro", sans-serif;
+    font-weight: 700;
+    font-size: 20px;
     color: white;
-    background-color: #2B2D35;
     text-align-last: right;
-    padding: 30% -40%; /*fix padding on right side, why won't it workkkk*/
+    padding-bottom: 15px;
     display: inline-block;
 }
 
 /* Need to style nav links in white */
 
 nav a:link{
-    font-family: "Roboto-Regular", "Roboto", sans-serif;
-    color: white;
+    color: black;
     text-decoration:none;
+    padding-right: 30px;
 }
 
 nav a:hover {
-    color: aquamarine;
     text-decoration: underline;
 }
 
-
 /* general links appearance*/
 
-a:link {color: #000000; text-decoration: none; font-family: "Roboto-Regular", sans-serif;
+a:link {color: #000000; text-decoration: none; 
 } 
 a:visited {color: mediumaquamarine; 
 } 
 a:focus {color: #000000; 
 } 
-a:hover {color: aquamarine; 
+a:hover {
+    color: aquamarine; 
 } 
 a:active {color: blue; 
 } 
@@ -82,136 +84,14 @@ footer {
 }
 */
 
-/* Styling for Sinead-Louisa story body */
-#story-body {
-    background-image:url("images/sinead/desktop.png");
-    background-position: 0vh 0vh;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    font-family: 'Catamaran', sans-serif;
-}
-
-#template-body {
-    background-color: #5D926E;
-    font-family: 'Catamaran', sans-serif;
-}
-
-.story-head {
-    display: flex;
-    background-color: lightblue;
-    margin-top: -1.4vh;
-    margin-right: -1vh;
-    margin-left: -1vh;
-    
-}
-
-.template-head {
-    display: flex;
-    margin-top: -1.4vh;
-    margin-right: -1vh;
-    margin-left: -1vh;
-    
-}
-
-.story-pg-whatif {
-    padding-left: 8vh;
-    margin-top: 3vh;
-}
-
-.story-pg-title {
-    text-align: center;
-    font-size: 300%;
-    padding-left: 22%; /* try and put all padding in vh rather than px, for cross screen compatibility*/
-    margin-top: 2vh;
-    position: static;
-}
-
-.footer {
-    left: 0; 
-    bottom: 0; 
-    width: 100%;
-    text-align: center;
-}
-
-.story-txt {
-    width: 65%;
-    height: 65%;
-    position: fixed;
-    top: 20%;
-    left: 25%;
-    border: solid #000;
-    border-width: 3px;
-    margin: auto;
-}
-
-/*CSS styling for Sinead and Louisa iframe */
-
-#bg-modal {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-    top: 0; 
-    left: 0;
-    right: 0;
-    bottom: 0;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0,0,0,0.7); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-}
-
-#modal-pic {
-    text-align: center;
-    padding-top: 25vh;
-    cursor: pointer;
-}
-
-#open-btn {
-    background-color: lightblue;
-    color: white;
-    border: none;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.modal-email {
-    width: 50%;
-    height: 50%;
-    background-color: white;
-    border-radius: 4px;
-    display: none;
-    margin: auto;
-    margin-top: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 6.5vh;
-    text-align: center;
-}
-
-.modal-email-text {
-    margin-top: 0vh;
-    display: inline-block;
-    vertical-align: middle;
-    line-height: normal;
-}
-
-
-
 /* CSS styling for splash screen */
 .splash {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
-    background-color: rgba(43,45,53,0.6);
-    z-index: 200;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(5, 91, 148, 0.8) 0%, rgba(5, 91, 148, 0.44) 100%);    z-index: 200;
     color: white;
     text-align: center;
     line-height: 30vh;
@@ -245,10 +125,10 @@ footer {
     display: block;
     margin: 0 auto;
     max-width: 230px;
-    max-height: 95px;
+    max-height: 230px;
     width: auto;
     height: auto;
-    padding-top: 70px;
+    margin-top: 10%;
     top: 0;
     left: 0;
     z-index: 200;
@@ -257,29 +137,29 @@ footer {
 }
 
 .splash-txt-1 {
-    font-size: 500%;
-    font-family: 'Catamaran', sans-serif;
+    font-size: 150px;
+    font-family: 'tt_blackitalic', sans-serif;
     opacity: 0;
     animation: fadeIn 1s ease-in forwards;
     animation-delay: 1s;
 }
 
 .splash-txt-2 {
-    font-family: 'Catamaran', sans-serif;
+    font-family: 'Maven Pro', sans-serif;
     opacity: 0;
     animation: fadeIn 1s ease-in forwards;
     animation-delay: 2s;
+    cursor: pointer;
 }
 
-  
 /*Button
     There's the general button code and then each button also gets its own code for placement purposes.
 */
 
 .Button {
-	background-color:#000000;
-	border-radius:42px;
-	border:8px solid #ffffff;
+    background: #D69898;
+    border-radius:42px;
+	border:5px solid #ffffff;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
@@ -344,7 +224,7 @@ footer {
     left: 20%;
     right: 20%;
     z-index: 10000;
-    font-family: "Roboto-Regular", sans-serif; 
+    font-family: "Maven Pro", sans-serif;
     border: 4px solid black;
 }
 
@@ -357,8 +237,8 @@ footer {
 	display:inline-block;
 	cursor:pointer;
 	color:#000000;
-	font-family: "Roboto", sans-serif;
-	font-size:28px;
+    font-family: "Maven Pro", sans-serif;
+    font-size:28px;
 	padding:13px 49px;
 	text-decoration:none;
 }
@@ -368,4 +248,21 @@ footer {
 .enterButton:active {
 	position:relative;
 	top:1px;
+}
+
+@font-face {
+    font-family: 'tt_normsbold';
+    src: url('fonts/ttnorms-bold-webfont.woff2') format('woff2'),
+         url('fonts/ttnorms-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'tt_blackitalic';
+    src: url('fonts/ttnorms-blackitalic-webfont.woff2') format('woff2'),
+         url('fonts/ttnorms-blackitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
