Revert "Sinead-tester merge"

--- a/credits.css
+++ b/credits.css
@@ -19,9 +19,7 @@ html, body{
 }
 
 body{
-	display:flex; 
-	flex-direction:column;
-	background-color: #FCFCFC;
+	background-color: #BAD1E5;
 }
 
 p, a, h3, h4, h1 {
@@ -30,10 +28,8 @@ p, a, h3, h4, h1 {
 }
 
 main {
-	height: 90%;
+	height: 100%;
 	display: grid;
-	flex:1 0 auto;
-	padding:20px;
 	grid-template-columns: minmax(60px, 1fr) repeat(3, minmax(50px, 380px)) minmax(60px, 1fr); 
 }
 
@@ -49,13 +45,12 @@ main {
 .counter-block {
 	display: inline-block;
 	align-items: center;
-	background: #9DC0E8;
-	border-radius: 30px;
+	background-color: var(--blocks);
 	text-align: center; 
 	height: 450px;
 	width: 400px;
 
-	padding: 30px 50px 30px 50px;
+	padding: 50px 50px 30px 50px;
 	margin: 30px 40px 30px 40px;
 }
 
@@ -66,22 +61,24 @@ main {
 
 .counter-block h3{	
 	font-size:150px;
-	font-weight: 700;
 }
 
 /* continue button */
 .space-bar{
 	grid-column: 1 / span 5;
 	height: 50px;
-	margin-top: 50px 0 0 0;
-	padding-top: 20px;
+	margin-top: 100px 0 0 0;
+	padding-top: 40px;
+	color: var(--light);
 	cursor: pointer;
-	text-align: center;
-	font-family: 'Maven Pro', sans-serif;
-	font-size: 30px;
-	color: #9DC0E8;
+	opacity: 0;
 }
 
+.space-text{
+	text-align: center;
+	font-family: 'tt_normsthin_italic', sans-serif;
+	font-size: 30px;
+}
 /* project credits */
 .project-credits { /* span across entire screen */
     display: inline-block;
@@ -89,54 +86,47 @@ main {
     text-align: center;
 	margin-top: 70px;
 	font-size: 18px;
-	overflow: scroll;
 }
 
 .project-credits h1 { /* span across entire screen */
-    font-family: 'Playfair Display', serif;
+    font-family: 'mermaid_swash', serif;
 	padding: 10px;
 	font-size: 80px;
 	word-spacing: 50px;
 }
 
-.creds-rolling h4 { /* span across entire screen */
+.project-credits h4 { /* span across entire screen */
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	padding: 20px
 }
 
-.creds-rolling p {
-	font-family: 'Maven Pro', sans-serif;
+.project-credits p {
+	font-family: 'tt_normslight', sans-serif;
 	letter-spacing: 1px;
 }
 
 /* footer, constant through two pages*/
-footer{
-	flex-shrink:0;
+.footer{
+	grid-column: 1 / span 5;
 	align-self: end;
-	height: 10%;
-	background: linear-gradient(270deg, #FFBBB1 0%, #FFDB9C 100%);
+	height: 100px;
+	background-color: var(--dark);
 	color: var(--light);
 	text-align: center;
-	font-family: 'Maven Pro', sans-serif;
-	width:100%;
+	font-family: 'tt_normsbold', sans-serif;
 }
 
-footer img {
+.footer img {
 	float: left;
 	height: 60px;
-	margin: 15px;
+	margin: 20px;
 }
 
-footer h2 {
+.footer h2 {
 	text-align: center;
-	padding-top: 30px;
+	padding-top: 20px;
 	font-size: 30px;
-}
-
-footer a {
-	padding-right: 50px;
-	float: right;
 }
 
 /* media query */
@@ -164,15 +154,15 @@ footer a {
 		font-size: 25px;
 	}
 	
-	footer {
+	.footer {
 		height: 75px;
 	}
 
-	footer img {
+	.footer img {
 		display: none;
 	}
 
-	footer h2 {
+	.footer h2 {
 		padding: 10px;
 		font-size: 20px;
 	}
