--- a/style.css
+++ b/style.css
@@ -82,25 +82,48 @@ footer {
 }
 */
 
-
+/* Styling for Sinead-Louisa story body */
 #story-body {
+    background-image:url("images/sinead/desktop.png");
+    background-position: 0vh 0vh;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    font-family: 'Catamaran', sans-serif;
+}
+
+#template-body {
     background-color: #5D926E;
     font-family: 'Catamaran', sans-serif;
 }
 
-.head {
+.story-head {
     display: flex;
+    background-color: lightblue;
+    margin-top: -1.4vh;
+    margin-right: -1vh;
+    margin-left: -1vh;
+    
+}
+
+.template-head {
+    display: flex;
+    margin-top: -1.4vh;
+    margin-right: -1vh;
+    margin-left: -1vh;
+    
 }
 
 .story-pg-whatif {
-    padding-left: 50px;
+    padding-left: 8vh;
+    margin-top: 3vh;
 }
 
 .story-pg-title {
     text-align: center;
-    font-size: 400%;
-    padding-left: 315px;
-    margin-top: 0px;
+    font-size: 300%;
+    padding-left: 22%; /* try and put all padding in vh rather than px, for cross screen compatibility*/
+    margin-top: 2vh;
+    position: static;
 }
 
 .footer {
@@ -111,13 +134,74 @@ footer {
 }
 
 .story-txt {
-    width: 95%;
-    height: 100vh;
+    width: 65%;
+    height: 65%;
+    position: fixed;
+    top: 20%;
+    left: 25%;
     border: solid #000;
     border-width: 3px;
-    background-color: #8EC29F;
     margin: auto;
 }
+
+/*CSS styling for Sinead and Louisa iframe */
+
+#bg-modal {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.7); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+}
+
+#modal-pic {
+    text-align: center;
+    padding-top: 25vh;
+    cursor: pointer;
+}
+
+#open-btn {
+    background-color: lightblue;
+    color: white;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.modal-email {
+    width: 50%;
+    height: 50%;
+    background-color: white;
+    border-radius: 4px;
+    display: none;
+    margin: auto;
+    margin-top: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 6.5vh;
+    text-align: center;
+}
+
+.modal-email-text {
+    margin-top: 0vh;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+}
+
+
 
 /* CSS styling for splash screen */
 .splash {
