--- a/doubled.css
+++ b/doubled.css
@@ -52,7 +52,7 @@
     line-height: 1.3;
 }
 
-/* 0.4: Daily Report Alert*/
+/* 0.35: Daily Report Alert*/
 .email {
     height: 400px;
     position: relative;
@@ -67,7 +67,7 @@
 }
 
 .email h1 {
-    font-size: 50px;
+    font-size: 40px;
     padding: 30px;
 }
 
@@ -83,41 +83,21 @@
     transform: translate(-50%, -85%);
 }
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
+/* 0.4: Daily Report*/
+.lastDigit:hover {
     cursor: pointer;
-  }
+}
+
+#dailyNum h1 {
+    font-size: 100px;
+    text-align: center;
+}
+
+.lastDigit {
+    font-weight: 700;
+    color: #0D1F2D;
+}
+
+.time {
+    visibility: hidden;
+}
