--- a/doubled.css
+++ b/doubled.css
@@ -101,3 +101,16 @@
 .time {
     visibility: hidden;
 }
+
+.count{
+    position: absolute;
+    margin-top: 25%;
+    left: 30%;
+    text-align: center;
+    font-size: 100px;
+    font-weight: 700;
+}
+
+.subwayText {
+    display: none;
+}
