--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body{
 }
 
 #home-body {
-    background-image: url(/images/bluemap.svg);
+    background-image: url(images/bluemap.svg);
     background-color: #EEEEEE;
     background-position: center;
     background-repeat: no-repeat;
