--- a/style.css
+++ b/style.css
@@ -116,7 +116,10 @@ footer {
 
 /* Splash screen text fade in keyframe function */
 @keyframes fadeIn{
-    to{
+    from {
+        opacity: 0;
+    }
+    to {
         opacity: 1;
     }
 }
@@ -275,6 +278,7 @@ footer {
 /* Styling for Sinead-Louisa story body */
 #story-body {
     background-image:url("images/sinead/desktop.png");
+    background-color: black;    
     background-position: 0vh 0vh;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -350,6 +354,7 @@ footer {
     background-color: rgba(0,0,0,0.7); /* Black background with opacity */
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
 }
+
 
 #modal-pic {
     text-align: center;
