--- a/style.css
+++ b/style.css
@@ -240,18 +240,17 @@ footer {
 }
 
 .enterButton {
-	background-color:#80c0ad;
+	background-color:#BAD1E5;
 	display:inline-block;
 	cursor:pointer;
-	color:#000000;
-    font-family: "Maven Pro", sans-serif;
-    font-size:28px;
+	color: white;
+	font-family: "Maven Pro", sans-serif;
+	font-size:28px;
 	padding:13px 49px;
-	text-decoration:none;
+	text-decoration: none;
 }
-
 .enterButton:hover {
-	background-color:#6abda4;
+	background-color:#BAD1E5; /*could have it change colors on hover by changing this*/
 }
 .enterButton:active {
 	position:relative;
