--- a/about.css
+++ b/about.css
@@ -1,32 +1,80 @@
-/* logo up top */
-h3{
-    font-family: 'tt_blackitalic', sans-serif;
-    margin-top: 1rem;
-    line-height: 59px;
-    font-size: 40px;
-    color: #8F6565;
+body {
+    background-color: #F2E9DA;
 }
 
-/* title */
-#story {
-    font-family: 'Playfair Display', serif;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 130px;
-    line-height: 200px;
-    display: flex;
-    align-items: center;
-    text-align: justify;
-    letter-spacing: 15px;
-    color: #8F6565;
-}
-  
 
 /* image */
-img {
-    margin-top: -13%;
-    margin-left: 20%;
+.title{
+    margin-top: 20vh;
+    width: 80%;
+    height: 60vh;
+    margin-bottom: 20vh;
 }
+
+/* mission statement */
+.mission h4 {
+    font-family: Playfair Display;
+    font-size: 50px;
+    line-height: 67px;
+    align-items: center;
+    margin-bottom: 25vh;
+}
+
+/* numbers */
+.numbers {
+    margin-bottom: 25vh;
+}
+.digits h1 {
+    font-family: Maven Pro;
+    font-size: 150px;
+    line-height: 294px;
+    color: #8F6565;
+}
+
+.digits p {
+    font-family: Maven Pro;
+    font-size: 20px;
+
+    color: #8F6565;
+}
+
+/* more info  */
+.contact h4 {
+    font-family: Playfair Display;
+    font-size: 40px;
+    align-items: center;
+    padding-bottom: 5vh;
+}
+
+.contact {
+    margin-bottom: 10vh;
+}
+
+/* navigation */
+.navbar {
+    background-color: #F2E9DA;
+}
+
+.nav-link {
+    font-family: Maven Pro;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 35px;
+    color: #8F6565 !important;
+    margin-right: 3vw;
+}
+
+.current:after{
+    content: ""; /* This is necessary for the pseudo element to work. */ 
+    display: block; /* This will put the pseudo element on its own line. */
+    margin: 0 auto; /* This will center the border. */
+    width: 100%; /* Change this to whatever width you want. */
+    padding-top: 10px; /* This creates some space between the element and the border. */
+    border-bottom: 3px solid #8F6565; /* This creates the border. Replace black with whatever color you want. */
+}
+
+/* Change font sizes based on screen size: mobille & ipad */
 
 /* Font Imports */
 @font-face {
