--- a/team.css
+++ b/team.css
@@ -2,57 +2,46 @@ body {
     background-color: #F2E9DA;
 }
 
-/* image */
+/* title */
 .title{
     width: 80%;
     margin-top: 10vh;
     margin-bottom: 10vh;
 }
 
-/* mission statement */
-.mission h4 {
-    font-family: Playfair Display;
-    font-size: 50px;
-    line-height: 67px;
-    align-items: center;
-    margin-bottom: 25vh;
+/* member block*/
+.member{
+    margin-bottom: 20vh;
+    margin-top: 10vh;
+    margin-right: 2vw;
+    margin-left: 2vw;
 }
 
-/* numbers */
-.numbers {
-    margin-bottom: 25vh;
+.memberIMG {
+    border-radius: 30px;
 }
 
-.digits h1 {
-    font-family: Maven Pro;
-    font-size: 150px;
-    line-height: 294px;
+a {
+    color: #000000;
+    font-weight: 500;
+}
+
+a:hover {
     color: #8F6565;
+    text-decoration: none;
 }
 
-.digits p {
-    font-family: Maven Pro;
-    font-size: 20px;
-
-    color: #8F6565;
+.member h4, p{
+    font-family: 'Maven Pro', sans-serif;
+    margin: 3vh 0 3vh 0;
 }
 
-/* more info  */
-.contact h4 {
-    font-family: Playfair Display;
-    font-size: 40px;
-    align-items: center;
-    padding-bottom: 5vh;
+.icon1 {
+    margin-right: 1vw;
 }
 
-.contact {
-    margin-bottom: 10vh;
-}
-
-.icon {
-    margin-top: 1vh;
-    margin-bottom: 5vh;
-    width: 70px;
+.icon2 {
+    margin-top: -0.5vw;
 }
 
 /* navigation */
@@ -79,69 +68,6 @@ body {
     padding-top: 10px; /* This creates some space between the element and the border. */
     border-bottom: 3px solid #8F6565; /* This creates the border. Replace black with whatever color you want. */
 }
-
-/* Change font sizes based on screen size: mobille & ipad */
-@media only screen and (max-width: 1024px) { 
-    .mission h4 {
-        font-size: 40px;
-        line-height: 50px;
-        margin-bottom: 15vh;
-    }
-
-    .contact h4 {
-        font-size: 25px;
-        align-items: center;
-        padding-bottom: 5vh;
-    }
-
-    .numbers {
-        margin-bottom: 15vh;
-    }
-
-    .icon {
-        width: 40px;
-    }
-}
-
-@media only screen and (max-width: 540px) { 
-    .title{
-        width: 100%;
-    }
-
-    .mission h4 {
-        font-size: 20px;
-        line-height: 30px;
-        margin-bottom: 15vh;
-    }
-
-    .numbers {
-        margin-bottom: 15vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .digits h1 {
-        font-size: 100px;
-        margin-bottom: -10vh;
-    }
-    
-    .digits p {
-        font-family: Maven Pro;
-        font-size: 15px;
-    }
-
-    .contact h4 {
-        font-size: 15px;
-        align-items: center;
-        padding-bottom: 5vh;
-    }
-
-    .icon {
-        width: 20px;
-    }
-}
-
 
 /* Font Imports */
 @font-face {
