--- a/submit.css
+++ b/submit.css
@@ -32,7 +32,7 @@ textarea {
     font-family: 'Maven Pro', sans-serif;
 }
 
-.btn {
+.button {
     font-size: 1.2rem;
     font-weight: 300;
     text-transform: uppercase;
@@ -43,7 +43,7 @@ textarea {
     border: 0px;
 }
 
-.btn:hover {
+.button:hover {
     font-size: 1.2rem;
     font-weight: 300;
     text-transform: uppercase;
@@ -56,7 +56,7 @@ textarea {
 
 .submit-logo {
     height: 1.2rem;
-    margin-top: -2vh;
+    margin-top: -0.2vh;
 }
 
 .submit-logo:hover {
