--- a/style.css
+++ b/style.css
@@ -275,13 +275,71 @@ footer {
 }
 
 /* Styling for Sinead-Louisa story body */
+.sinead-splash {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.9);   
+    z-index: 200;
+    color: white;
+    text-align: center;
+    line-height: 5vh;
+    cursor: pointer;
+}
+
+.sinead-splash.display-none {
+    position: fixed;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -10;
+    color: white;
+    text-align: center;
+    line-height: 10vh;
+    transition: all 0.5s;
+}
+
+
+
+.sinead-txt-1 {
+    font-size: 100px;
+    font-family: 'Cedarville Cursive', cursive;
+    opacity: 0;
+    animation: fadeIn 1s ease-in forwards;
+    margin-top: 40vh;
+}
+
+.sinead-txt-2 {
+    font-family: "Maven Pro", sans-serif;
+    font-size: 150%;
+    opacity: 0;
+    animation: fadeIn 1s ease-in forwards;
+    animation-delay: 1s;
+    cursor: pointer;
+    margin-top: 10vh;
+}
+
+.sinead-txt-3 {
+    font-family: "Maven Pro", sans-serif;
+    font-size: 100%;
+    opacity: 0;
+    animation: fadeIn 1s ease-in forwards;
+    animation-delay: 2s;
+    cursor: pointer;
+    margin-top: 10vh;
+}
+
 #story-body {
-    background-image:url("images/sinead/desktop.png");
+    background-image:url("images/sinead/bg-a.png");
     background-color: black;    
     background-position: 0vh 0vh;
     background-repeat: no-repeat;
     background-size: 100%;
-    font-family: 'Catamaran', sans-serif;
+    font-family: 'Merriweather', serif;
 }
 
 #template-body {
@@ -357,7 +415,7 @@ footer {
 
 #modal-pic {
     text-align: center;
-    padding-top: 25vh;
+    padding-top: 7vh;
     cursor: pointer;
 }
 
