adds bootstrap to pinpoints
-theoretically the pinpoints should be in a consistent spot, they have the img-fluid tag and IDs for each of their individual locations 🤞🏾

--- a/style.css
+++ b/style.css
@@ -160,7 +160,9 @@ footer {
 
   
 /*Button
-    There's the general button code and then each button also gets its own code for placement purposes.
+    There's CSS button code and then each button also gets its own code for placement purposes.
+
+    CAN BE DELETED AFTER JS BUTTON IS SORTED
 */
 
 .Button {
@@ -183,28 +185,28 @@ footer {
 }
 
 /* story 1 (New York) */
-.story1 {
+#story1 {
     margin-left: 850%;
-    margin-bottom: -625%;
+    margin-bottom: -1100%;
 }
 
 
 /* story 2 (South Korea) */
-.story2 {
-    margin-left: 2500%;
-    margin-bottom: -750%;
+#story2 {
+    margin-left: 2570%;
+    margin-bottom: -1300%;
 }
 
 /* story 3 (Philadelphia) */
-.story3 {
+#story3 {
     margin-left: 600%;
-    margin-bottom: -725%;
+    margin-bottom: -1300%;
 }
 
 /* story 4 (Ireland/New Orleans) */
-.story4 {
-    margin-left: 1050%;
-    margin-bottom: -580%;
+#story4 {
+    margin-left: 1100%;
+    margin-bottom: -850%;
 }
 
 /*javascript pop-up*/
