--- a/style.css
+++ b/style.css
@@ -259,6 +259,21 @@ footer {
 	top:1px;
 }
 
+/* clode button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @font-face {
     font-family: 'tt_normsbold';
     src: url('fonts/ttnorms-bold-webfont.woff2') format('woff2'),
