--- a/doubled.css
+++ b/doubled.css
@@ -138,7 +138,7 @@
 }
 
 /* 0.8: Pause */
-.modal {
+.modal, .modal2 {
     position: fixed;
     left: 0;
     top: 0;
@@ -157,24 +157,18 @@
     transform: translate(-50%, -50%);
     background-color: white;
     padding: 1rem 1.5rem;
-    width: 30rem;
+    width: 35rem;
     border-radius: 0.5rem;
+    font-family: "Maven Pro", sans-serif;
 }
-.close-button {
-    float: right;
-    width: 1.5rem;
-    line-height: 1.5rem;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 0.25rem;
-    background-color: lightgray;
-}
-.close-button:hover {
-    background-color: darkgray;
-}
+
 .show-modal {
     opacity: 1;
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.popup .show {
+    visibility: visible;
 }
