--- a/countdown.css
+++ b/countdown.css
@@ -4,7 +4,7 @@ body {
     font-size: 50px;
     text-align: center;
     margin: 20px;
-    font-family: sans-serif;
+    font-family: 'Maven Pro', sans-serif;
 }
 
 h1 {
