--- a/style.css
+++ b/style.css
@@ -387,11 +387,11 @@ a:active {color: blue;
 
 #story-body {
     background-image:url("images/sinead/bg-1.jpg");
-    background-color: black;    
-    background-position: 6vh 0vh;
+    background-color: #172740;    
+    background-position: 7vh 0vh;
     background-repeat: no-repeat;
     background-size: 93%;
-    font-family: 'Merriweather', serif;
+    font-family: 'Helvetica', sans-serif;
 }
 
 .story-txt {
