--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ a:active {color: blue;
     cursor: pointer;
     user-select: none;
 }
-/* The popup matches our style for the most part.*/
+/* The popup matches our style for the most part. */
 .popup .popuptext {
     visibility: hidden;
     background-color: #ffffff;
@@ -195,11 +195,24 @@ a:active {color: blue;
     position: fixed;
     top: auto;
     bottom: auto;
-    left: 20%;
+    left: 30%;
     right: 20%;
     z-index: 10000;
     font-family: "Maven Pro", sans-serif;
     border: 4px solid black;
+}
+
+
+
+.popuptext img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
+
+.popuptext h1{
+    color: #184876
 }
 
 .popup .show {
