--- a/style.css
+++ b/style.css
@@ -202,8 +202,6 @@ a:active {color: blue;
     border: 4px solid black;
 }
 
-
-
 .popuptext img {
     display: block;
     margin-left: auto;
@@ -223,7 +221,7 @@ a:active {color: blue;
 	background-color:#BAD1E5;
 	display:inline-block;
 	cursor:pointer;
-	color: white;
+    font-weight: 500;
 	font-family: "Maven Pro", sans-serif;
 	font-size:28px;
 	padding:13px 49px;
@@ -236,6 +234,7 @@ a:active {color: blue;
 	position:relative;
 	top:1px;
 }
+
 
 /* clode button */
 .close {
