--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ a:active {color: blue;
     position: fixed;
     top: auto;
     bottom: auto;
-    left: 30%;
+    left: 25%;
     right: 20%;
     z-index: 10000;
     font-family: "Maven Pro", sans-serif;
@@ -215,6 +215,10 @@ a:active {color: blue;
 
 .popup .show {
     visibility: visible;
+}
+
+#myPopup3 {
+    height: 80%;
 }
 
 .enterButton {
