--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ html {
 }
 
 body {
-  max-width: 1200px;
   margin: 20px auto;
   padding: 0 100px;
   overflow-x: hidden;
@@ -197,6 +196,29 @@ li.active a, a:hover, a:active {
 }
 */
 
+/* popup */
+.enterButton {
+	background-color:#BAD1E5;
+	display:inline-block;
+	cursor:pointer;
+  font-weight: 500;
+	font-size: 1em;
+	padding:8px 30px;
+	text-decoration: none;
+}
+.enterButton:hover {
+	background-color:#BAD1E5; /*could have it change colors on hover by changing this*/
+}
+.enterButton:active {
+	position:relative;
+	top:1px;
+}
+.content h2{
+  color: #184876
+}
+
+/* map */
+
 .centered {
   position: absolute;
   top: 50%;
@@ -207,7 +229,8 @@ li.active a, a:hover, a:active {
 
 .centered-y {
   position: absolute;
-  width: 100%;
+  margin-left: 5%;
+  width: 90%;
   top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
@@ -258,14 +281,16 @@ li.active a, a:hover, a:active {
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   overflow: overlay;
+  font-family: "Maven Pro", sans-serif;
+
 }
 .distribution-map .map-point:active, .distribution-map .map-point:focus {
   margin: 0;
   padding: 0;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
-  width: 300px;
-  height: 220px;
+  width: 600px;
+  height: 400px;
   color: black;
   z-index: 1;
   -webkit-transition: opacity 0.25s ease-in-out, width 0.25s ease-in-out, height 0.25s ease-in-out;
@@ -281,6 +306,7 @@ li.active a, a:hover, a:active {
   -webkit-transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
   transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
   overflow: hidden;
+  background: #FFFFFF;
 }
 
 .distribution-map .map-point:hover {
